# p2p-chess

./: .gitignore  Cargo.toml  Cross.toml  README.md  icons.xcf  letters.xcf  rustfmt.toml  sprite.xcf
.github/workflows/: builds.yml
app/: Cargo.toml
app/src/: bitmap.rs  board.rs  cli.rs  colour.rs  drawable.rs  game.rs  letters.rs  main.rs  palette.rs  png.rs  rect.rs  sprite.rs  start_screen.rs
app/src/components/: mod.rs  textbox.rs
channel/: Cargo.toml
channel/src/: channel.rs  lib.rs
commands/: Cargo.toml
commands/src/: command.rs  lib.rs
networking/: Cargo.toml
networking/src/: handle.rs  lib.rs  message.rs  node.rs  tor_handle.rs
ui/: Cargo.toml
ui/src/: bitmap.rs  board.rs  clipboard.rs  color.rs  drawable.rs  events.rs  game.rs  game_screen.rs  letters.rs  lib.rs  palette.rs  rect.rs  screen_manager.rs  sprite.rs  start_screen.rs  ui.rs
ui/src/components/: button.rs  handler.rs  label.rs  listbox.rs  mod.rs  textbox.rs
