[package]
name = "p2p-chess"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_shutdown = { git = "https://github.com/tari-project/tari.git", tag = "v0.32.3" }
ui = { path = "../ui" }
networking = { path = "../networking" }
p2p_chess_channel = { path = "../channel" }

anyhow = "1.0.41"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.8.4"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }