[package]
name = "p2p_chess_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_comms = { path = "../../tari/comms" }
tokio = { version = "1.7.1", default-features = false, features = ["sync"] }
