[package]
name = "p2p_chess_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Just needed for CommsPublicKey
tari_comms = { git = "https://github.com/tari-project/tari.git", tag = "v0.38.5"}

tokio = { version = "1", default-features = false, features = ["sync"] }
