[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_comms = { path = "../../tari/comms/core" }
tari_comms_dht = { path = "../../tari/comms/dht", features=["bundled-sqlite"] }
tari_storage = { path = "../../tari/infrastructure/storage" }
tari_shutdown = { path = "../../tari/infrastructure/shutdown" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.13.0" }
p2p_chess_channel = { path = "../channel" }

anyhow = "1.0.41"
lmdb-zero = "0.4.4"
log = "0.4.14"
os_pipe = "1.0.1"
prost = "0.9.0"
rand = "0.8.4"
regex = "1"
serde = "1.0.126"
serde_json = "1.0.64"
tokio = "1.7.1"
tower = { version = "0.4", features = ["util"] }
