[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "development" }
tari_comms_dht = { git = "https://github.com/tari-project/tari.git", branch = "development" }
tari_storage = { git = "https://github.com/tari-project/tari.git", branch = "development" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "development" }
# Used for the network enum
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "development" }
tari_crypto = "0.18.0"
p2p_chess_channel = { path = "../channel" }

anyhow = "1.0.41"
lmdb-zero = "0.4.4"
log = "0.4.14"
os_pipe = "1.0.1"
prost = "0.9.0"
rand = "0.8"
regex = "1"
serde = "1.0"
serde_json = "1.0"
tokio = "1"
tower = { version = "0.4", features = ["util"] }
