[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tari_comms = { path = "../../tari/comms" }
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.12.4" }
p2p_chess_channel = { path = "../channel" }

anyhow = "1.0.41"
bmp = "0.5.0"
clipboard = "0.5.0"
kira = "0.5.3"
log = "0.4.14"
minifb = "0.19.3"
once_cell = "1.10.0"
pleco = "0.5.0"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
